# email-assistant

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: classifier.rs  commands.rs  config.rs  labels.rs  learning.rs  main.rs  predictions.rs  profile.rs  rules.rs
src/commands/: support.rs
src/providers/: gmail.rs  mod.rs  outlook.rs  outlook_web.rs
