[package]
name = "email-assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
gmail = { path = "../gmail" }
outlook = { path = "../outlook" }
tokio = { version = "1", features = ["full", "process"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
