[package]
name = "email-assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
gmail = { git = "https://github.com/Osso/gmail-cli" }
outlook = { git = "https://github.com/Osso/outlook-cli" }
outlook-web = { path = "../outlook-web" }
tokio = { version = "1", features = ["full", "process"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
claude-safe = { git = "ssh://git.localdomain/claude-safe" }
